WebCore: Intro text at Star Wars demo is clipped. <rdar://problem/7560979> https://bugs.webkit.org/show_bug.cgi?id=33909

Reviewed by Simon Fraser.

Test: compositing/repaint/layer-repaint.html

We are flipping the coordinates for drawing, therefore
we must flip them also when we invalidate the rectangles.

* platform/graphics/win/GraphicsLayerCACF.cpp:
(WebCore::WebLayer::setNeedsDisplay):

LayoutTests: Intro text at Star Wars demo is clipped.
<rdar://problem/7560979>
https://bugs.webkit.org/show_bug.cgi?id=33909

Reviewed by Simon Fraser.

We are flipping the coordinates for drawing, therefore
we must flip them also when we invalidate the rectangles.

* compositing/repaint/layer-repaint.html: Added.
* platform/mac/compositing/repaint/layer-repaint-expected.checksum: Added.
* platform/mac/compositing/repaint/layer-repaint-expected.png: Added.
* platform/mac/compositing/repaint/layer-repaint-expected.txt: Added.



Canonical link: https://commits.webkit.org/47463@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56169 268f45cc-cd09-0410-ab3c-d52691b4dbfc